--- a/src/templates/error/maintenance.html
+++ b/src/templates/error/maintenance.html
@@ -47,7 +47,7 @@
                 <a href="https://github.com/jdabtieu/CTFOJ">here</a>.
             </p>
         </footer>
-        <script src="/assets/js/darkMode.js"></script>
+        <script src="/assets/js/nav.js"></script>
         <script src="/assets/js/bootstrap.bundle.min.js"></script>
     </body>
 </html>
