--- a/src/templates/admin/users.html
+++ b/src/templates/admin/users.html
@@ -19,9 +19,10 @@
             <tr>
                 <th scope="col" style="width: 10%;">ID</th>
                 <th scope="col" style="width: 20%;">Username</th>
-                <th scope="col" style="width: 25%;">Email</th>
-                <th scope="col" style="width: 25%;">Join Date</th>
-                <th scope="col" style="width: 20%;">Actions</th>
+                <th scope="col" style="width: 20%;">Email</th>
+                <th scope="col" style="width: 20%;">Join Date</th>
+                <th scope="col" style="width: 15%;">Perms</th>
+                <th scope="col" style="width: 15%;">Actions</th>
             </tr>
         </thead>
         <tbody>
@@ -29,17 +30,30 @@
             <tr>
                 <td class="userid">{{ row["id"] }}</td>
                 <td class="username
-                           {{ 'user-ban' if row['banned'] }}
-                           {{ 'user-admin' if row['admin'] }}">
+                           {{ 'user-ban' if row['banned'] }}">
                     <a href="/users/{{ row['username'] }}/profile"
                        class="username
-                              {{ 'user-ban' if row['banned'] }}
-                              {{ 'user-admin' if row['admin'] }}">
+                              {{ 'user-ban' if row['banned'] }}">
                         {{ row["username"] }}
                     </a>
                 </td>
                 <td>{{ row["email"] }}</td>
                 <td class="dt">{{ row["join_date"] }}</td>
+                <td>
+                    <form method="POST" action="/admin/updateperms?user_id={{ row['id'] }}" class="perm-select">
+                        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+                        <select multiple name="perms" style="height: 0px; visibility: hidden;"
+                            multiselect-hide-x = "false">
+                            {% for name, id in perm_list.items() %}
+                                <option value="{{ id }}"
+                                        {{ 'selected' if disp_perms.get(row['id']) and disp_perms[row['id']].get(id) }}>
+                                    {{ name }}
+                                </option>
+                            {% endfor %}
+                        </select>
+                        <input type="submit" value="Update">
+                    </form>
+                </td>
                 <td data-id="{{ row['id'] }}" data-username="{{ row['username'] }}">
                     <a href="#">
                         <img src="/assets/images/restrict.svg"
@@ -55,13 +69,6 @@
                              alt="Reset password"
                              title="Reset password">
                     </a>
-                    <a href="#">
-                        <img src="/assets/images/arrow-up.svg"
-                             onerror="this.src='/assets/images/arrow-up.png'"
-                             class="svg-green icon users-admin"
-                             alt="Grant/Revoke admin"
-                             title="Grant/Revoke admin">
-                    </a>
                 </td>
             </tr>
             {% endfor %}
@@ -70,6 +77,7 @@
 </div>
 {% endblock %}
 {% block script %}
+<script src="https://cdn.jsdelivr.net/gh/admirhodzic/multiselect-dropdown/multiselect-dropdown.js"></script>
 <script>
     function createForm(msg, path, userId) {
         document.getElementById("confirm").style.display = "";
