--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -30,7 +30,7 @@
                             <li><a class="nav-link" href="/problems">Practice</a></li>
                             <li><a class="nav-link" href="/contests">Contests</a></li>
                             <li><a class="nav-link" href="/ranking">Rankings</a></li>
-                            {% if session.admin %}
+                            {% if check_perm(["ADMIN", "SUPERADMIN", "PROBLEM_MANAGER"]) %}
                                 <li><a class="nav-link" href="/admin/console">Admin Console</a></li>
                             {% endif %}
                         </ul>
