--- a/src/templates/problem/problem.html
+++ b/src/templates/problem/problem.html
@@ -15,7 +15,7 @@
     {% endif %}
     {{ data["name"] }}
 </h1>
-{% if session["admin"] %}
+{% if check_perm(["ADMIN", "SUPERADMIN", "PROBLEM_MANAGER"]) %}
     <div id="confirm" style="display: none;">
         <form method="post" style="margin-bottom: 1rem;" action="">
             <input class="btn btn-danger" type="submit" value="">
@@ -157,7 +157,7 @@
             {% if data["editorial"] %}
                 <br><a href="{{ request.path }}/editorial">View editorial</a>
             {% endif %}
-            {% if session["admin"] %}
+            {% if check_perm(["ADMIN", "SUPERADMIN", "PROBLEM_MANAGER"]) %}
                 <br><a href="/admin/submissions?problem_id={{ request.path.split('/')[2] }}">
                         View submissions
                     </a>
@@ -195,28 +195,28 @@
         document.getElementById("hint").classList.toggle("hidden");
     });
 </script>
-{% if session["admin"] %}
-    <script>
-        document.querySelector(".btn-delete").addEventListener("click", function () {
-            document.getElementById("confirm").style.display = "";
-            document.querySelector("#confirm form")
-                    .setAttribute("action", window.location.pathname + "/delete");
-            document.querySelector("#confirm form .btn")
-                    .setAttribute("value", "Are you sure you want to delete this problem? " +
-                                           "Click here to confirm.");
-        });
-    </script>
+{% if check_perm(["ADMIN", "SUPERADMIN", "PROBLEM_MANAGER"]) %}
+<script>
+    document.querySelector(".btn-delete").addEventListener("click", function () {
+        document.getElementById("confirm").style.display = "";
+        document.querySelector("#confirm form")
+                .setAttribute("action", window.location.pathname + "/delete");
+        document.querySelector("#confirm form .btn")
+                .setAttribute("value", "Are you sure you want to delete this problem? " +
+                                       "Click here to confirm.");
+    });
+</script>
 {% endif %}
 {% if data["draft"] %}
-    <script>
-        document.querySelector(".btn-publish").addEventListener("click", function () {
-            document.getElementById("confirm").style.display = "";
-            document.querySelector("#confirm form")
-                    .setAttribute("action", window.location.pathname + "/publish");
-            document.querySelector("#confirm form .btn")
-                    .setAttribute("value", "Are you sure you want to publish this problem? " +
-                                           "Click here to confirm.");
-        });
-    </script>
+<script>
+    document.querySelector(".btn-publish").addEventListener("click", function () {
+        document.getElementById("confirm").style.display = "";
+        document.querySelector("#confirm form")
+                .setAttribute("action", window.location.pathname + "/publish");
+        document.querySelector("#confirm form .btn")
+                .setAttribute("value", "Are you sure you want to publish this problem? " +
+                                       "Click here to confirm.");
+    });
+</script>
 {% endif %}
 {% endblock %}
