--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -125,6 +125,7 @@
 
 .perm-select .multiselect-dropdown {
     min-width: 60px;
+    max-width: 100%;
 }
 
 .perm-select .multiselect-dropdown span.optext {
@@ -132,9 +133,13 @@
     font-size: 0.75rem;
 }
 
+.perm-select .multiselect-dropdown-list-wrapper {
+    border: none;
+}
+
 .perm-select .multiselect-dropdown-list input {
     height: unset;
-    width: unset;   
+    width: unset;
 }
 
 .perm-select .multiselect-dropdown-list label {
@@ -356,4 +361,21 @@ input:-webkit-autofill:active{
 
 .dark input:-webkit-autofill{
     -webkit-text-fill-color: white;
+}
+
+.dark .perm-select .multiselect-dropdown-list-wrapper {
+    background: #2f2f2f;
+}
+
+.dark .perm-select .multiselect-dropdown {
+    background-color: #5d5d5d;
+}
+
+.dark .perm-select .multiselect-dropdown .optext {
+    color: black;
+}
+
+
+.dark .perm-select .multiselect-dropdown-list div:hover {
+    background-color: #5d5d5d;
 }
