Spelling inconsistency in ranking.html
Thanks @fireheartjerry

--- a/src/templates/ranking.html
+++ b/src/templates/ranking.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
-{% block title %}Ranking{% endblock %}
-{% block active %}Ranking{% endblock %}
+{% block title %}Rankings{% endblock %}
+{% block active %}Rankings{% endblock %}
 
 {% block main %}
 <h1>Rankings</h1>
