Add dedicated Practice / Contest Scoreboard buttons
Fixes #214

--- a/src/templates/contest/contest.html
+++ b/src/templates/contest/contest.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "contest/layout.html" %}
 
 {% block title %}{{ title }}{% endblock %}
 {% block active %}Contests{% endblock %}
@@ -6,27 +6,22 @@
 {% block main %}
 <div style="position: relative; margin-bottom: 0.5rem;">
     <h1 style="display: inline;">{{ title }}</h1>
-    {% if scoreboard or check_perm(["ADMIN", "SUPERADMIN"]) %}
+    {% if check_perm(["ADMIN", "SUPERADMIN"]) %}
         <div class="dropdown" style="display: inline; margin-left: 4px;">
             <button class="btn btn-secondary dropdown-toggle" type="button"
                     data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
                     style="margin-top: -18px;">Actions</button>
             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                {% if scoreboard %}
-                    <a class="dropdown-item" href="{{ request.path }}/scoreboard">Scoreboard</a>
-                {% endif %}
-                {% if check_perm(["ADMIN", "SUPERADMIN"]) %}
-                    <a class="dropdown-item"
-                       href="/admin/submissions?contest_id={{ request.path[9:] }}">Submissions</a>
-                    <a class="dropdown-item"
-                       href="{{ request.path }}/addproblem">Add Problem</a>
-                    <a class="dropdown-item"
-                       href="{{ request.path }}/drafts">View Draft Problems</a>
-                    <a class="dropdown-item"
-                       href="{{ request.path }}/notify">Notify Participants</a>
-                    <a class="dropdown-item"
-                       href="/api/contest/scoreboard/{{ request.path[9:] }}?key={{ scoreboard_key }}">Export CTFtime Scoreboard</a>
-                {% endif %}
+                <a class="dropdown-item"
+                   href="/admin/submissions?contest_id={{ request.path[9:] }}">Submissions</a>
+                <a class="dropdown-item"
+                   href="{{ request.path }}/addproblem">Add Problem</a>
+                <a class="dropdown-item"
+                   href="{{ request.path }}/drafts">View Draft Problems</a>
+                <a class="dropdown-item"
+                   href="{{ request.path }}/notify">Notify Participants</a>
+                <a class="dropdown-item"
+                   href="/api/contest/scoreboard/{{ request.path[9:] }}?key={{ scoreboard_key }}">Export CTFtime Scoreboard</a>
             </div>
         </div>
     {% endif %}
