--- a/src/templates/contest/draft_problems.html
+++ b/src/templates/contest/draft_problems.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "contest/layout.html" %}
 
 {% block title %}{{ title }} Draft Problems{% endblock %}
 {% block active %}Contests{% endblock %}
