--- a/src/templates/contest/export_problem.html
+++ b/src/templates/contest/export_problem.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "contest/layout.html" %}
 
 {% block title %}Export {{ data["name"] }}{% endblock %}
 {% block active %}Contests{% endblock %}
