--- a/src/templates/contest/contest_problem_noexist.html
+++ b/src/templates/contest/contest_problem_noexist.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "contest/layout.html" %}
 
 {% block title %}Nonexistent problem{% endblock %}
 {% block active %}Contests{% endblock %}
