--- a/src/templates/contest/create_problem.html
+++ b/src/templates/contest/create_problem.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "contest/layout.html" %}
 
 {% block title %}Create Problem{% endblock %}
 {% block active %}Contests{% endblock %}
