--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -27,8 +27,9 @@
                     <ul class="navbar-nav me-auto">
                         <li><a class="nav-link" href="/">Home</a></li>
                         <li><a class="nav-link" href="/problems">Practice</a></li>
+                        <li><a class="nav-link" href="/ranking">Practice Leaderboard</a></li>
                         <li><a class="nav-link" href="/contests">Contests</a></li>
-                        <li><a class="nav-link" href="/ranking">Rankings</a></li>
+                        {% block contest_leaderboard %}{% endblock %}
                         {% if check_perm(["ADMIN", "SUPERADMIN", "PROBLEM_MANAGER"]) %}
                             <li><a class="nav-link" href="/admin/console">Admin Console</a></li>
                         {% endif %}
