--- a/src/templates/ranking.html
+++ b/src/templates/ranking.html
@@ -1,10 +1,20 @@
 {% extends "layout.html" %}
 
-{% block title %}Rankings{% endblock %}
-{% block active %}Rankings{% endblock %}
+{% block title %}Practice Leaderboard{% endblock %}
+{% block active %}Practice Leaderboard{% endblock %}
 
 {% block main %}
-<h1>Rankings</h1>
+<h1>Practice Leaderboard</h1>
+{% if is_ongoing_contest %}
+<div class="alert alert-danger alert-dismissible fade show" role="alert">
+        There is currently an ongoing contest. To view its scoreboard, go to the <a href="/contests">Contests</a> page, enter the contest, and then click "Contest Leaderboard" at the top of the page.
+        This scoreboard is only for <b>practice problems unrelated to the contest</b>.
+        <button type="button"
+                class="btn-close"
+                data-bs-dismiss="alert"
+                aria-label="Close"></button>
+    </div>
+{% endif %}
 <div style="overflow-x: auto;">
     <table class="table table-hover table-full-width">
         <thead class="table-dark">
