--- a/src/templates/contest/contest_problem_noexist.html
+++ b/src/templates/contest/contest_problem_noexist.html
@@ -8,5 +8,5 @@
 <div>
     The problem with id {{ request.path.split("/")[4] }} does not exist.
 </div>
-<a href="/contest/{{ request.path.split("/")[2] }}">Back to contest</a>
+<a href="/contest/{{ request.path.split('/')[2] }}">Back to contest</a>
 {% endblock %}
