--- a/src/templates/problem/draft_problems.html
+++ b/src/templates/problem/draft_problems.html
@@ -18,7 +18,7 @@
         <tbody>
             {% for row in data %}
             <tr>
-                <td><a href="/problem/{{ row["id"] }}">{{ row["name"] }}</a></td>
+                <td><a href="/problem/{{ row['id'] }}">{{ row["name"] }}</a></td>
                 <td>{{ row["category"] }}</td>
                 <td>{{ row["point_value"] }}</td>
             </tr>
