--- a/src/templates/problem/problems.html
+++ b/src/templates/problem/problems.html
@@ -62,8 +62,8 @@
                 <td><a href="/problem/{{ row["id"] }}">{{ row["name"] }}</a></td>
                 <td>{{ row["category"] }}</td>
                 <td>{{ row["point_value"] }}</td>
-                {% if check_perm(["ADMIN", "SUPERADMIN"]) %}
-                    <td><a href="/admin/submissions?problem_id={{ row["id"] }}&correct=AC">
+                {% if check_perm(["ADMIN", "SUPERADMIN", "CONTENT_MANAGER"]) %}
+                    <td><a href="/admin/submissions?problem_id={{ row['id'] }}&correct=AC">
                         {{ row["sols"] }}
                     </a></td>
                 {% else %}
