Add database-enforced UNIQUE constraint
#239

--- a/src/templates/admin/submissions.html
+++ b/src/templates/admin/submissions.html
@@ -22,7 +22,7 @@
             <tbody>
                 {% for row in data %}
                 <tr>
-                    <td>{{ row["sub_id"] }}</td>
+                    <td>{{ row["id"] }}</td>
                     <td class="dt">{{ row["date"] }}</td>
                     <td>{{ row["username"] }}</td>
                     <td>{{ row["problem_id"] }}</td>
