--- a/src/templates/admin/users.html
+++ b/src/templates/admin/users.html
@@ -13,67 +13,84 @@
         <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
     </form>
 </div>
-<div style="overflow-x: auto;">
-    <table class="table table-hover table-full-width">
-        <thead class="table-dark">
-            <tr>
-                <th scope="col" style="width: 10%;">ID</th>
-                <th scope="col" style="width: 20%;">Username</th>
-                <th scope="col" style="width: 20%;">Email</th>
-                <th scope="col" style="width: 20%;">Join Date</th>
-                <th scope="col" style="width: 15%;">Perms</th>
-                <th scope="col" style="width: 15%;">Actions</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for row in data %}
-            <tr>
-                <td class="userid">{{ row["id"] }}</td>
-                <td class="username
-                           {{ 'user-ban' if row['banned'] }}">
-                    <a href="/users/{{ row['username'] }}/profile"
-                       class="username
-                              {{ 'user-ban' if row['banned'] }}">
-                        {{ row["username"] }}
-                    </a>
-                </td>
-                <td>{{ row["email"] }}</td>
-                <td class="dt">{{ row["join_date"] }}</td>
-                <td>
-                    <form method="POST" action="/admin/updateperms?user_id={{ row['id'] }}" class="perm-select">
-                        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
-                        <select multiple name="perms" style="height: 0px; visibility: hidden;"
-                            multiselect-hide-x = "false">
-                            {% for name, id in perm_list.items() %}
-                                <option value="{{ id }}"
-                                        {{ 'selected' if disp_perms.get(row['id']) and disp_perms[row['id']].get(id) }}>
-                                    {{ name }}
-                                </option>
-                            {% endfor %}
-                        </select>
-                        <input type="submit" value="Update">
-                    </form>
-                </td>
-                <td data-id="{{ row['id'] }}" data-username="{{ row['username'] }}">
-                    <a href="#">
-                        <img src="/assets/images/restrict.svg"
-                             onerror="this.src='/assets/images/restrict.png'"
-                             class="svg-red icon users-ban"
-                             alt="Ban/Unban user"
-                             title="Ban/Unban user">
-                    </a>
-                    <a href="#">
-                        <img src="/assets/images/key.svg"
-                             onerror="this.src='/assets/images/key.png'"
-                             class="icon users-resetpass"
-                             alt="Reset password"
-                             title="Reset password">
-                    </a>
-                </td>
-            </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+<div class="flex-desktop">
+    <div style="flex: 3; overflow-x: auto;">
+        <table class="table table-hover table-full-width">
+            <thead class="table-dark">
+                <tr>
+                    <th scope="col" style="width: 10%;">ID</th>
+                    <th scope="col" style="width: 20%;">Username</th>
+                    <th scope="col" style="width: 20%;">Email</th>
+                    <th scope="col" style="width: 20%;">Join Date</th>
+                    <th scope="col" style="width: 15%;">Perms</th>
+                    <th scope="col" style="width: 15%;">Actions</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for row in data %}
+                <tr>
+                    <td class="userid">{{ row["id"] }}</td>
+                    <td class="username
+                               {{ 'user-ban' if row['banned'] }}">
+                        <a href="/users/{{ row['username'] }}/profile"
+                           class="username
+                                  {{ 'user-ban' if row['banned'] }}">
+                            {{ row["username"] }}
+                        </a>
+                    </td>
+                    <td>{{ row["email"] }}</td>
+                    <td class="dt">{{ row["join_date"] }}</td>
+                    <td>
+                        <form method="POST" action="/admin/updateperms?user_id={{ row['id'] }}" class="perm-select">
+                            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+                            <select multiple name="perms" style="height: 0px; visibility: hidden;"
+                                multiselect-hide-x = "false">
+                                {% for name, id in perm_list.items() %}
+                                    <option value="{{ id }}"
+                                            {{ 'selected' if disp_perms.get(row['id']) and disp_perms[row['id']].get(id) }}>
+                                        {{ name }}
+                                    </option>
+                                {% endfor %}
+                            </select>
+                            <input type="submit" value="Update">
+                        </form>
+                    </td>
+                    <td data-id="{{ row['id'] }}" data-username="{{ row['username'] }}">
+                        <a href="#">
+                            <img src="/assets/images/restrict.svg"
+                                 onerror="this.src='/assets/images/restrict.png'"
+                                 class="svg-red icon users-ban"
+                                 alt="Ban/Unban user"
+                                 title="Ban/Unban user">
+                        </a>
+                        <a href="#">
+                            <img src="/assets/images/key.svg"
+                                 onerror="this.src='/assets/images/key.png'"
+                                 class="icon users-resetpass"
+                                 alt="Reset password"
+                                 title="Reset password">
+                        </a>
+                    </td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
+    <div style="flex: 1; margin-left: 8px;">
+        <div class="card">
+            <h3>Search Users</h3>
+            <form>
+                <div class="form-floating">
+                    <input class="form-control mb-3"
+                           id="search-q"
+                           name="q"
+                           placeholder="Username / Email">
+                    <label for="search-q">Username / Email</label>
+                </div>
+                <input class="btn btn-primary" type="submit" value="Search">
+            </form>
+        </div>
+    </div>
 </div>
 {% endblock %}
 {% block script %}
